[package]
name = "skan"
version = "0.1.0"
authors = ["timothy adigun <2teezrust@gmail.com>"]
description = "Skan is a Rust-native, Java Scanner-inspired library that provides type-safe, convenient methods for parsing various data types from multiple input sources with robust error handling and comprehensive documentation."
readme = "README.md"
license = "MIT"
repository = "https://github.com/2teez/skan"
documentation = "https://github.com/2teez/skan"
keywords = [
    "input-parsing",
    "scanner",
    "utilities",
    "cli-tools",
    "text-processing",
]
categories = [
    "text-processing",
    "encoding",
    "command-line-utilities",
    "parser-implementations",
    "development-tools",
]
exclude = ["/target", "Cargo.toml.orig"]

edition = "2021"

[dependencies]
